# zprintf

./: .clang-format  CMakeLists.txt  main.c
libft/: Makefile
libft/ft_printf/: ft_printf.h  pf_len.c  pf_parsing.c  pf_put.c  pf_router.c
libft/inc/: get_next_line.h  libft.h
libft/src/char/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_tolower.c  ft_toupper.c
libft/src/conv/: ft_atoi.c  ft_itoa.c  ft_swap.c
libft/src/lines/: ft_count_word.c  ft_getlines.c  get_next_line.c
libft/src/lst/: ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstrev.c
libft/src/math/: ft_clamp.c  ft_isprime.c  ft_iterative_power.c  ft_sqrt.c
libft/src/mem/: ft_bzero.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memrchr.c  ft_memset.c
libft/src/put/: ft_lprintf.c  ft_put2str.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c
libft/src/str/: ft_findchr.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strlower.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strndup.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c
